<resources>
    <string name="app_name">CSCI3130Project</string>
    <string name="EMPTY_LIST">No products found</string>
    <string name="EMPTY_STRING">""</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sort">sort</string>
    <string name="INVALID_LOGIN">Invalid Login</string>

    //provinces list and their cities to detect the users' location
    <string-array name="provinces_list">
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>Alberta</item>
    </string-array>

    <string-array name="cities_list">
        <item>Halifax</item>
        <item>Sydney</item>
        <item>Dartmouth</item>
        <item>Truro</item>
        <item>New Glasgow</item>
        <item>Bedford</item>
        <item>Lower Sackville</item>
    </string-array>

    <string-array name="ontario_cities_list">
        <item>Toronto</item>
        <item>Ottawa</item>
        <item>Niagara</item>
    </string-array>

    <string-array name="quebec_cities_list">
        <item>Montreal</item>
        <item>Quebec</item>
        <item>Ottawa</item>
    </string-array>


    <string name="messages">Messages</string>
    <string name="savedItems">Saved</string>
    <string name="homeButton">Home</string>
    <string name="loading">Loading..</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="rate_this_user">Rate this user?</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="username">username</string>
    <string name="listed_by">Listed by:</string>
    <string name="send_trade_request">Send Trade Request</string>
    <string name="rate_the_listing">Rate the listing?</string>
    <string name="product_description">Product description</string>
    <string name="product_title">Product title</string>
    <string name="rating">Rating:</string>
    <string name="provider_username">Provider Username</string>
</resources>