<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/savedItems"
        android:id="@+id/savedItems"
        app:showAsAction="never"/>
    <item
        android:title="@string/messages"
        android:id="@+id/messageInbox"
        app:showAsAction="never"/>
    <item
        android:title="@string/logout"
        android:id="@+id/logout"
        app:showAsAction="never"/>
</menu>