<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/homeButton"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/homeButton"
        app:showAsAction="always"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:title="@string/savedItems"
        android:id="@+id/savedItems"
        android:icon="@drawable/baseline_bookmark_added_24"
        app:showAsAction="always"/>
    <item
        android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="@drawable/baseline_power_settings_new_24"
        app:showAsAction="always"/>
</menu>