<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_account_circle_24" />

    <TextView
        android:id="@+id/provider_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provider_username" />

    <TextView
        android:id="@+id/provider_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/rating_text_view"
        app:layout_constraintTop_toBottomOf="@+id/provider_username" />

    <TextView
        android:id="@+id/rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_user"
        android:textSize="15sp"
        android:layout_marginTop="550dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_text" />

    <Button
        android:id="@+id/rate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_rating"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>